spade-macros/tests/ui/missing_primary_span.stderr
error: primary span is required
 --> tests/ui/missing_primary_span.rs:3:10
  |
3 | #[derive(spade_macros::IntoDiagnostic)]
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `spade_macros::IntoDiagnostic` (in Nightly builds, run with -Z macro-backtrace for more info)
